<resources>
    <string name="app_name">7MinuteWorkout</string>
    <string name="start">START</string>
    <string name="start_image">Start Image</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="upcoming_exercise">Upcoming Exercise</string>
    <string name="image">image</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done_the_workout">You have completed the workout!</string>
    <string name="finish">FINISH</string>
    <string name="end">END</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="warning_message">This will stop the Workout ! Are you sure you want to quit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="your_bmi_is">YOUR BMI IS</string>
    <string name="calculate">Calculate</string>
    <string name="metric_units">Metric Units</string>
    <string name="imperial_units">Imperial Units</string>
    <string name="imperial_height_inches">Inches</string>
    <string name="imperial_height_feet">Feet</string>
    <string name="history">History</string>
    <string name="no_data_available">NO DATA AVAILABLE !</string>
    <string name="completed_exercises">Completed Exercises</string>
</resources>