<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi_activity"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white" />

    <RadioGroup
        android:id="@+id/rg_units"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_bmi_activity"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:clickable="false"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_metric_unit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_imperial_unit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:text="@string/imperial_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_weight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_units"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/color_accent"
        app:hintTextColor="@color/color_accent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            app:hintTextColor="@color/color_accent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_height"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_weight"
        android:layout_margin="10dp"
        android:visibility="visible"
        app:boxStrokeColor="@color/color_accent"
        app:hintTextColor="@color/color_accent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            app:hintTextColor="@color/color_accent" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_imperial_height_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_height"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/color_accent"
            app:hintTextColor="@color/color_accent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_feet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/imperial_height_feet"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                app:hintTextColor="@color/color_accent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/color_accent"
            app:hintTextColor="@color/color_accent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_inches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/imperial_height_inches"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                app:hintTextColor="@color/color_accent" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_display_bmi_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_imperial_height_input"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_your_bmi_is"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_bmi_is"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_your_bmi_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="16.00" />

        <TextView
            android:id="@+id/tv_your_bmi_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="Overweight" />

        <TextView
            android:id="@+id/tv_your_bmi_category_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="Normal" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_calculate_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_display_bmi_result"
        android:layout_gravity="bottom"
        android:layout_marginTop="35dp"
        android:background="@color/color_accent"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>